# vcu

./: .gitignore  README.md
.github/workflows/: ci.yml
VCU-H745ZI-Q/: .gitignore  .mxproject  .project  VCU-H745ZI-Q.ioc
VCU-H745ZI-Q/CM7/: .cproject  .project  VCU-H745ZI-Q_CM7 Debug.launch
VCU-H745ZI-Q/CM7/Core/Inc/: stm32h7xx_it.h
VCU-H745ZI-Q/CM7/Core/Src/: main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c
VehicleControlUnit/: .cproject  .mxproject  .project  STM32F103RBTX_FLASH.ld  VehicleControlUnit Debug (1).launch  VehicleControlUnit Debug.launch  VehicleControlUnit.ioc  mx.scratch
VehicleControlUnit/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
VehicleControlUnit/Core/Src/: main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c
VehicleControlUnit/UnitTests/: CMakeLists.txt  MockLibraries.cpp  README.MD  test.cpp
VehicleControlUnit/UnitTests/Inc/: MockLibraries.hpp
VehicleControlUnit/UserLib/BMSInterfaceLib/: BMSInterface.cpp
VehicleControlUnit/UserLib/DashboardInterfaceLib/: DashboardInterface.cpp
VehicleControlUnit/UserLib/DataStoreLib/: DataStore.cpp
VehicleControlUnit/UserLib/MCUInterfaceLib/: MCUErrorManager.cpp  MCUInterface.cpp
VehicleControlUnit/UserLib/MainLib/: ConfigGroupParser.cpp  ConfigLoader.cpp  ConfigParser.cpp  ConfigValueParser.cpp  MainLib.cpp
VehicleControlUnit/UserLib/ReadyToDriveLib/: ReadyToDrive.cpp
VehicleControlUnit/UserLib/SensorInterfaceLib/: SensorInterface.cpp
VehicleControlUnit/UserLib/UtilsLib/: ADCManager.cpp  CANMananger.cpp  GPIOManager.cpp  Logger.cpp
(+49 files in other folders)
